@@ -102,9 +102,12 @@
                             --add-exports geci.examples/javax0.geci.tests.fluent=geci.core
                             --add-exports geci.examples/javax0.geci.buildfluent=geci.core
                             --add-opens geci.jamal/javax0.geci.jamal=ALL-UNNAMED
+                            --add-exports geci.jamal/javax0.geci.jamal=ALL-UNNAMED
                             --add-opens geci.jamal/javax0.geci.jamal.util=ALL-UNNAMED
                             --add-opens geci.jamal/javax0.geci.jamal.sample=ALL-UNNAMED
                             --add-exports geci.examples/javax0.geci.jamal.reflection=ALL-UNNAMED
+                            --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+                            --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
                         </argLine>
                     </configuration>
                     <dependencies>
@@ -219,55 +222,55 @@
             <dependency>
                 <groupId>com.javax0.jamal</groupId>
                 <artifactId>jamal-engine</artifactId>
-                <version>1.7.6</version>
+                <version>1.7.7</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.javax0.jamal</groupId>
                 <artifactId>jamal-testsupport</artifactId>
-                <version>1.7.6</version>
+                <version>1.7.7</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.javax0.jamal</groupId>
                 <artifactId>jamal-snippet</artifactId>
-                <version>1.7.6</version>
+                <version>1.7.7</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.javax0.jamal</groupId>
                 <artifactId>jamal-io</artifactId>
-                <version>1.7.6</version>
+                <version>1.7.7</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.javax0.jamal</groupId>
                 <artifactId>jamal-plantuml</artifactId>
-                <version>1.7.6</version>
+                <version>1.7.7</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.javax0.jamal</groupId>
                 <artifactId>jamal-ruby</artifactId>
-                <version>1.7.6</version>
+                <version>1.7.7</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.javax0.jamal</groupId>
                 <artifactId>jamal-groovy</artifactId>
-                <version>1.7.6</version>
+                <version>1.7.7</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.javax0.jamal</groupId>
                 <artifactId>jamal-scriptbasic</artifactId>
-                <version>1.7.6</version>
+                <version>1.7.7</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.javax0.jamal</groupId>
                 <artifactId>jamal-yaml</artifactId>
-                <version>1.7.6</version>
+                <version>1.7.7</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
